gccida/c2/alloc_block
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:697:12: error: expected expression
*( _OWORD *)&result->count = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:697:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->count = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:698:12: error: expected expression
*( _OWORD *)&result->aux = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:698:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->aux = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:699:12: error: expected expression
*( _OWORD *)&result->global_live_at_start = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:699:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->global_live_at_start = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:700:12: error: expected expression
*( _OWORD *)&result->local_set = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:700:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->local_set = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:701:12: error: expected expression
*( _OWORD *)&result->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:701:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:702:12: error: expected expression
*( _OWORD *)&result->head_tree = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:702:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->head_tree = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:703:12: error: expected expression
*( _OWORD *)&result->head = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/cfg.c:703:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->head = 0LL; 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alloc_block/src/obj/cfg.o] Error 1
